<resources>
    <string name="app_name">Юртэкс-Нар - приложение</string>
    <string name="jurtex_nar">Юртэкс-Нар</string>
    <string name="main_intro">Помогаем физическим и юридическим лицам проводить таможенное оформление быстро, качественно и недорого. Имеем собственный штат профессиональных декларантов. Владеем и имеем в наличии все необходимое программное обеспечение для работы с таможней. Знаем все нюансы и формальности таможенной работы. Обращайтесь!</string>
    <string name="services_button_main">Услуги</string>
    <string name="contacts_button_main">Контакты</string>
    <string name="about_us_button_main">О нас</string>
    <string name="specialists_button_main">Специалисты</string>
    <string name="footer_text">© 2021 Все права защищены. Зарегистрирована в реестре Таможенных представителей Государственного таможенного комитета республики Беларусь (ГТК РБ) за № ТА-0600/0000014</string>
    <string name="complaint_menu">Написать отзыв</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="our_services">Наши услуги</string>
    <string name="our_contacts">Наши контакты</string>
    <string name="grodno">Гродно</string>
    <string name="minsk">Минск</string>
    <string name="orlovskaya">Офис для статистического декларирования</string>
    <string name="orlovskaya_address">г. Минск ул. Орловская 40, офис 25, 2 этаж</string>
    <string name="orlovskaya_phones">+375 44 580 31 66, \nт/ф. +375 17 363 22 66, \nтел. +375 17 363 22 67</string>
    <string name="orlovskaya_specialist">Контактное лицо: \nспециалист по таможенному декларированию \nКастрицкая Татьяна \nтел. +375 44 544 54 55.</string>
    <string name="orlovskaya_mail">stat@custom.by</string>
    <string name="to_call">📞Звонок</string>
    <string name="route">🚩Маршрут</string>
    <string name="kolyadichi_title">ПТО Колядичи-Авто</string>
    <string name="kolyadichi_address">г. Минск ул. Бабушкина, 39, офис 413</string>
    <string name="kolyadichi_phone">тел./факс +375 17 510 20 10</string>
    <string name="kolyadichi_mail">123@custom.by,\n291228112@custom.by</string>
    <string name="kolyadichi_chaleckaya">специалист по таможенному декларированию \nХалецкая Татьяна, \nтел. +375 29 122 81 12 </string>
    <string name="kolyadichi_pavluchenko">специалист по таможенному декларированию \nПавлюченко Андрей \nтел. +375 29 122 60 33</string>
    <string name="minsk_sez_title">ПТО Минск-СЭЗ</string>
    <string name="minsk_sez_address">г. Минск ул. Промышленная улица, 23, \nэтаж 1, офис 15</string>
    <string name="minsk_sez_phone">+375 44 580 82 88, \n+375 29 122 81 12</string>
    <string name="minsk_sez_mail">445808288@custom.by</string>
    <string name="minsk_sez_tenetko">начальник отдела \nТенетко Татьяна \nтел. +375 44 580 82 88</string>
    <string name="minsk_sez_chaleckaya">специалист по таможенному декларированию \nХалецкая Татьяна, \nтел. +375 29 122 81 12.</string>
    <string name="kulttorg_title">ПТО Культторг</string>
    <string name="kulttorg_address">Минск, Меньковский тракт, 8, офис 209, \nкоординаты GPS 53.847368, 27.415433 \n(ТЛЦ Озерцо-логистик, здание Белкультторга)</string>
    <string name="kulttorg_phones">тел. +375 17 507 66 01, \n+375 17 507 68 37</string>
    <string name="kulttorg_mail">445803165@custom.by \nahlamov@custom.by</string>
    <string name="kulttorg_achlamov">начальник отдела Ахламов Евгений, \nф. +375 17 507 67 08, \nт. +375 17 507 67 09, \nт. +375 29 616 74 02</string>
    <string name="kulttorg_skardilo">специалист по таможенному декларированию Скарадило Анастасия, \nтел. +375 17 507 6601, \nф. +375 17 507 6837, \nт. +375 44 580 31 65</string>
    <string name="grodno_title">Филиал в городе Гродно</string>
    <string name="grodno_address">г. Гродно ул. Пучкова, 28, 1 этаж, здание СВХ</string>
    <string name="grodno_phone">т/ф. +375 152 60 55 41</string>
    <string name="grodno_mail">grodno@custom.by</string>
    <string name="grodno_urchik">Контактное лицо: \nдиректор филиала Юрчик Олег Иванович \nтел. +375 44 580 82 96, \n+375 29 557 45 77</string>
    <string name="about_title">О нас</string>
    <string name="about_text">
        \nПолное наименование: \nОбщество с ограниченной ответственностью Юртэкс-Нар.
        \nКраткое наименование: ООО Юртэкс-Нар.
        \n\nУНП: 100988586. \nОКПО: 373731156000.
        \n\nКонтакты
        \nЮридический адрес: Республика Беларусь, 223021, Минская область, Минский район, с/с Щомыслицкий 115, район д.Богатырево, каб. 209
        \n\nПочтовый адрес: 220053, г. Минск, ул. Орловская, д. 40, офис 25.
        \n\nДиректор: Володько Наталья Игоревна
        \n+ 375 17 363 22 66, + 375 17 363 22 67, + 375 44 580 31 66
        \n\nГлавный бухгалтер: Козловская Наталья Александровна
        \nтел. + 375 17 363 22 66, + 375 17 363 22 67.</string>
    <string name="our_team">Наша команда</string>
    <string name="to_write">📧Письмо</string>
    <string name="utilsbor_description">Если Вы ввезли автомобиль, то до постановки его на учет в ГАИ необходимо заплатить утильсбор и оформить в таможне документ уплаты. Документ заполняется в специальной программе с формированием электронной копии для предоставления в таможню. Предлагаем Вам воспользоваться нашими услугами для подготовки и регистрации в таможне документа уплаты утильсбора. Просчитать стоимость утильсбора можно при помощи калькулятора на данной странице. Услуга по оформлению оплачивается отдельно.
        \nНаша компания является таможенным представителем, зарегистрированным в реестре ГТК РБ за № ТА-0600/0000014 и вправе произвести оформление документа уплаты утильсбора "под ключ", т.е. с оформлением документа в таможне.
        \nВам будет необходимо только отправить сфотографированные документы на e-mail декларанта и забрать уже оформленный в таможне документ. Стоимость этой услуги - 24 рубля (дополнительно оплачивается услуга по заполнению документа в размере 25 рублей).
\nСтоимость услуги декларанта по заполнению документа уплаты - 25 рублей (без регистрации в таможенных органах).
\nНаши специалисты профессионально и в кратчайшие сроки оформят Вам все необходимые документы.</string>
    <string name="subject_letter">Тема вашего сообщения</string>
    <string name="send_message_button">Отправить сообщение</string>
    <string name="message_letter">Текст вашего сообщения</string>
</resources>