<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MinskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:text="@string/orlovskaya"/>
            <ImageView
                android:src="@drawable/baseline_place_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/orlovskaya_address"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_local_phone_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/orlovskaya_phones"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_mail_outline_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/orlovskaya_mail"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/orlovskaya_specialist"
                android:textSize="16sp"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/orlovskaya_call"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/to_call"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/orlovskaya_route"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_height="1sp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:text="@string/kolyadichi_title"/>
            <ImageView
                android:src="@drawable/baseline_place_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kolyadichi_address"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_local_phone_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kolyadichi_phone"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_mail_outline_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/kolyadichi_mail"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kolyadichi_chaleckaya"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kolyadichi_pavluchenko"
                android:textSize="16sp"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/kolyadichi_call"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/to_call"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/kolyadichi_route"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_height="1sp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:text="@string/minsk_sez_title"/>
            <ImageView
                android:src="@drawable/baseline_place_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/minsk_sez_address"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_local_phone_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/minsk_sez_phone"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_mail_outline_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/minsk_sez_mail"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/minsk_sez_tenetko"
                android:textSize="16sp"/>

            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/minsk_sez_chaleckaya"
                android:textSize="16sp"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/sez_call"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/to_call"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/sez_route"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_height="1sp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:text="@string/kulttorg_title"/>
            <ImageView
                android:src="@drawable/baseline_place_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kulttorg_address"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_local_phone_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kulttorg_phones"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_mail_outline_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/kulttorg_mail"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kulttorg_achlamov"
                android:textSize="16sp"/>
            <ImageView
                android:layout_height="match_parent"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/kulttorg_skardilo"
                android:textSize="16sp"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/kulttorg_call"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/to_call"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/kulttorg_route"
                android:layout_width="0dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_height="1sp"/>
        <include
            layout="@layout/activity_footer_text"/>
    </LinearLayout>
</FrameLayout>
</androidx.core.widget.NestedScrollView>
